--- a/jmeter-k8s-starterkit-master/k8s/tool/influxdb/influxdb-pod-autoscaler.yaml
+++ b/jmeter-k8s-starterkit-master/k8s/tool/influxdb/influxdb-pod-autoscaler.yaml
@@ -10,3 +10,9 @@ spec:
   minReplicas: 1
   maxReplicas: 5
   targetCPUUtilizationPercentage: 10
+- type: Resource
+      resource:
+        name: memory
+        target:
+          type: Utilization
+          averageUtilization: 50
