--- a/jmeter-k8s-starterkit-master/k8s/tool/influxdb/influxdb-pod-autoscaler.yaml
+++ b/jmeter-k8s-starterkit-master/k8s/tool/influxdb/influxdb-pod-autoscaler.yaml
@@ -9,11 +9,17 @@ spec:
     name: influxdb
   minReplicas: 1
   maxReplicas: 5
-  targetCPUUtilizationPercentage: 10
   metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 50
   - type: Resource
     resource:
       name: memory
       target:
         type: Utilization
         averageUtilization: 50
+
