--- a/jmeter-k8s-starterkit-master/k8s/jmeter/jmeter-slave_template.yaml
+++ b/jmeter-k8s-starterkit-master/k8s/jmeter/jmeter-slave_template.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: jmeter-slaves-1
+  name: jmeter-slaves<exec_num>
   labels:
     jmeter_mode: slave
 spec:
@@ -39,6 +39,7 @@ spec:
               mbean = "java.lang:name=*,type=GarbageCollector"
               paths = ["LastGcInfo"]
               tag_keys = ["name"]
+
 
             [[inputs.jolokia2_agent.metric]]
               name  = "java_threading"
@@ -96,3 +97,4 @@ spec:
             - cat
             - /opt/jmeter/apache-jmeter/bin/jmeter
       restartPolicy: OnFailure
+
