--- a/jmeter-k8s-starterkit-master/k8s/tool/wiremock/wiremock-service.yaml
+++ b/jmeter-k8s-starterkit-master/k8s/tool/wiremock/wiremock-service.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: v1
 kind: Service
 metadata:
@@ -6,9 +5,10 @@ metadata:
   labels:
     type: mock
 spec:
-  clusterIP: None
+  type: NodePort
   ports:
     - port: 8080
       targetPort: 8080
+      nodePort: 30000   # Specify the desired NodePort here
   selector:
     type: mock
