--- a/jmeter-k8s-starterkit-master/k8s/tool/influxdb/influxdb-deployment.yaml
+++ b/jmeter-k8s-starterkit-master/k8s/tool/influxdb/influxdb-deployment.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -31,6 +30,10 @@ spec:
           volumeMounts:
             - mountPath: /var/lib/influxdb
               name: var-lib-influxdb
+        - name: stress
+          image:
+docker.io/
+suhailust/alipne-stress:my-alpine-stress
       volumes:
         - name: var-lib-influxdb
           persistentVolumeClaim:
