--- a/jmeter-k8s-starterkit-master/k8s/tool/grafana/grafana-pod-autoscaler.yaml
+++ b/jmeter-k8s-starterkit-master/k8s/tool/grafana/grafana-pod-autoscaler.yaml
@@ -1,4 +1,4 @@
-apiVersion: autoscaling/v1
+apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
   name: grafana-autoscaler
@@ -9,11 +9,15 @@ spec:
     name: grafana
   minReplicas: 1
   maxReplicas: 10
-  targetCPUUtilizationPercentage: 10
   metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        targetAverageUtilization: 10
     - type: Resource
       resource:
         name: memory
         targetAverageUtilization: 10
+
 
 
