--- a/jmeter-k8s-starterkit-master/k8s/tool/grafana/grafana-autoscaler.yaml
+++ b/jmeter-k8s-starterkit-master/k8s/tool/grafana/grafana-autoscaler.yaml
@@ -1,12 +1,19 @@
-apiVersion: autoscaling/v1
+apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: grafana-autoscaler
+  name: grafana-hpa
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: grafana
-  minReplicas: 1
-  maxReplicas: 10
-  targetCPUUtilizationPercentage: 5
+    name: grafana  # Replace with your Grafana deployment name
+  minReplicas: 1  # Minimum number of replicas
+  maxReplicas: 5  # Maximum number of replicas
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 50  # Target average CPU utilization percentage
+
