--- a/jmeter-k8s-starterkit-master/k8s/tool/grafana/grafana-autoscaler.yaml
+++ b/jmeter-k8s-starterkit-master/k8s/tool/grafana/grafana-autoscaler.yaml
@@ -1,4 +1,4 @@
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
   name: grafana-hpa
@@ -13,7 +13,5 @@ spec:
   - type: Resource
     resource:
       name: cpu
-      target:
-        type: Utilization
-        averageUtilization: 50  # Target average CPU utilization percentage
+      targetAverageUtilization: 50  # Target average CPU utilization percentage
 
