--- a/jmeter-k8s-starterkit-master/k8s/tool/influxdb/influxdb-pod-autoscaler.yaml
+++ b/jmeter-k8s-starterkit-master/k8s/tool/influxdb/influxdb-pod-autoscaler.yaml
@@ -1,4 +1,4 @@
-apiVersion: autoscaling/v2beta1
+apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
   name: influxdb-hpa
@@ -6,17 +6,18 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: influxdb   # Name of your InfluxDB deployment
-  minReplicas: 1   # Minimum number of pods
-  maxReplicas: 5   # Maximum number of pods
+    name: influxdb
+  minReplicas: 1
+  maxReplicas: 5
   metrics:
-  - type: Resource
-    resource:
-      name: cpu
-      targetAverageUtilization: 50   # Target average CPU utilization percentage
-  - type: Resource
-    resource:
-      name: memory
-      targetAverageUtilization: 50   # Target average memory utilization percentage
+    - type: Pods
+      pods:
+        metricName: cpu
+        targetAverageUtilization: 50
+    - type: Pods
+      pods:
+        metricName: memory
+        targetAverageUtilization: 70
+
 
 
