--- a/jmeter-k8s-starterkit-master/k8s/tool/influxdb/influxdb-pod-autoscaler.yaml
+++ b/jmeter-k8s-starterkit-master/k8s/tool/influxdb/influxdb-pod-autoscaler.yaml
@@ -10,14 +10,15 @@ spec:
   minReplicas: 1
   maxReplicas: 5
   metrics:
-    - type: Pods
-      pods:
-        metricName: cpu
+    - type: Resource
+      resource:
+        name: cpu
         targetAverageUtilization: 50
-    - type: Pods
-      pods:
-        metricName: memory
-        targetAverageUtilization: 70
+    - type: Resource
+      resource:
+        name: memory
+        targetAverageValue: 70Mi  # Adjust this value as needed
+
 
 
 
