--- a/jmeter-k8s-starterkit-master/k8s/tool/influxdb/influxdb-pod-autoscaler.yaml
+++ b/jmeter-k8s-starterkit-master/k8s/tool/influxdb/influxdb-pod-autoscaler.yaml
@@ -1,4 +1,4 @@
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: influxdb-hpa
@@ -9,14 +9,5 @@ spec:
     name: influxdb
   minReplicas: 1
   maxReplicas: 5
-  metrics:
-    - type: Resource
-      resource:
-        name: cpu
-        targetAverageUtilization: 50
-    - type: Resource
-      resource:
-        name: memory
-        targetAverageValue: 70Mi  # Adjust this value as needed
-
+  targetCPUUtilizationPercentage: 10
 
