--- a/jmeter-k8s-starterkit-master/k8s/tool/influxdb/influxdb-pod-autoscaler.yaml
+++ b/jmeter-k8s-starterkit-master/k8s/tool/influxdb/influxdb-pod-autoscaler.yaml
@@ -9,5 +9,9 @@ spec:
     name: influxdb
   minReplicas: 1
   maxReplicas: 5
-  targetCPUUtilizationPercentage: 10
+  metrics:
+    - type: Pods
+      pods:
+        metricName: cpu
+        targetAverageUtilization: 50
 
